--- a/saycheese/saycheese/Base.lproj/Main.storyboard
+++ b/saycheese/saycheese/Base.lproj/Main.storyboard
@@ -89,6 +89,31 @@
             </objects>
             <point key="canvasLocation" x="31.875" y="32.74647887323944"/>
         </scene>
+        <!--Playback View Controller-->
+        <scene sceneID="f6j-1Q-4BX">
+            <objects>
+                <viewController storyboardIdentifier="showVideo" id="eQD-tV-GHC" customClass="PlaybackViewController" customModule="saycheese" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fxc-tq-H8u">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BXF-3r-CMG">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Sl9-Yd-rd0"/>
+                    </view>
+                    <connections>
+                        <outlet property="videoView" destination="BXF-3r-CMG" id="YWE-wQ-7Iq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C1f-hR-g5s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="879.375" y="17.95774647887324"/>
+        </scene>
     </scenes>
     <resources>
         <image name="cameraIcon" width="64" height="64"/>
